retrieveUnpackaged/objects/RelationCustomerPatient__c.object
<CustomObject>
    <fields>
        <fullName>ClinicPatientId__c</fullName>
        <description>/</description>
        <label>Clinic Patient Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerCity__c</fullName>
        <formula>Customer__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <description>/</description>
        <formula>Customer__r.Name</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerShippingCity__c</fullName>
        <description>/</description>
        <formula>Customer__r.ShippingCity</formula>
        <label>Customer Shipping City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerStreet__c</fullName>
        <formula>Customer__r.Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>/</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patients</relationshipLabel>
        <relationshipName>Patients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>/</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PatientBirthdate__c</fullName>
        <description>/</description>
        <formula>Patient__r.Birthdate__c</formula>
        <label>Patient Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PatientGender__c</fullName>
        <description>/</description>
        <formula>Text(Patient__r.Gender__c)</formula>
        <label>Patient Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientName__c</fullName>
        <description>/</description>
        <formula>Patient__r.Name</formula>
        <label>Patient Patient Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PatientPatientIdLs__c</fullName>
        <description>/</description>
        <formula>Patient__r.PatientIdLs__c</formula>
        <label>Patient Patient Id LS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <description>/</description>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Clinics/Distributors</relationshipLabel>
        <relationshipName>RelationsCustomerPatient</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Relation Customer Patient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer__c</columns>
        <columns>CustomerName__c</columns>
        <columns>Patient__c</columns>
        <columns>PatientName__c</columns>
        <columns>ClinicPatientId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{000000000}</displayFormat>
        <label>Relation Customer Patient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relations Customer Patient</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>